kubernetes-templating/frontend/templates/ingress.yaml

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-frontend
  annotations:
    kubernetes.io/ingress.class: "nginx" 
    cert-manager.io/issuer: "letsencrypt-prod2"
    kubernetes.io/tls-acme: “true”
spec:
  rules:
  - host: shop.34.123.91.85.nip.io
    http:
      paths:
      - backend:
          serviceName: frontend
          servicePort: 80
        pathType: Prefix
        path: /
